--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ function Delay()
 <p><span style="color: blue;">Hi Guys this is amazing.</span><br> I do not know who wrote this HTML code.<br> Asoka Liyanage.</p>
 
 <p><b>The story behind this clock.</b></p>
-<p>My father sent me an email asking me to figure it out.  I placed it into a Web document and  this is the result.  Enjoy! (Best viewed with Microsoft Internet Explorer or Google Chrome)</p>
-<p><a href="/dburgnerjr/index.html">Back to homepage.</a></p>
+<p>My father sent me an email asking me to figure it out.  I placed it into a Web document and this is the result.  Enjoy! (Best viewed with Microsoft Internet Explorer or Google Chrome)</p>
+<p><a href="/">Back to homepage.</a></p>
 </body>
 
 </html>
